# own_vio_example

./: .gitignore  CMakeLists.txt  Estimator.cpp  Estimator.h  EstimatorFilter.cpp  EstimatorFilter.h  EstimatorOptimization.cpp  EstimatorOptimization.h  FeatureManager.cpp  FeatureManager.h  FeatureTracker.cpp  FeatureTracker.h  ImuFactor.h  InitialAlignment.cpp  InitialAlignment.h  InitialExRotation.cpp  InitialExRotation.h  InitialSfM.cpp  InitialSfM.h  IntegrationBase.h  MarginalizaitonFactor.cpp  MarginalizaitonFactor.h  MarginalizationFactor.cpp  MarginalizationFactor.h  MotionEstimator.cpp  MotionEstimator.h  Parameters.h  PinholeCamera.cpp  PinholeCamera.h  PoseLocalParameterization.h  ProjectionFactor.h  ProjectionTdFactor.h  System.cpp  System.h  Utility.h  main.cpp
Backend/: Edge.cpp  Edge.h  EdgeImu.h  EdgePrior.h  EdgeReprojection.h  EigenTypes.h  LossFunction.h  Problem.cpp  Problem.h  Vertex.cpp  Vertex.h  VertexInverseDepth.h  VertexPose.h  VertexSpeedBias.h
